some more keycloak config

--- a/Lib/Neon.Kube/Resources/Helm/keycloak/templates/external-db-secret.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/keycloak/templates/external-db-secret.yaml
@@ -4,11 +4,11 @@ metadata:
   name: keycloak-db-secret
   namespace: keycloak
   labels:
-    app: sso
+    app: neon-sso
 data: # all values Base64
-  POSTGRES_DATABASE:  <Database Name>
-  POSTGRES_EXTERNAL_ADDRESS: <External Database  IP or URL (resolvable by K8s)>
-  POSTGRES_EXTERNAL_PORT: <External  Database Port>
-  POSTGRES_PASSWORD: <Database Password>
-  POSTGRES_USERNAME:  <Database Username>
+  POSTGRES_DATABASE:  {{ .Values.database.dbName }}
+  POSTGRES_EXTERNAL_ADDRESS: {{ .Values.database.service }}
+  POSTGRES_EXTERNAL_PORT: {{ .Values.database.port }}
+  POSTGRES_PASSWORD: {{ .Values.database.password }}
+  POSTGRES_USERNAME:  {{ .Values.database.username }}
 type: Opaque
