--- a/Lib/Neon.Kube/Resources/Helm/grafana/templates/ingress.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/grafana/templates/ingress.yaml
@@ -1,7 +1,7 @@
 ﻿apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: k8s-dashboard-virtual-service
+  name: grafana-dashboard-virtual-service
   namespace: neon-ingress
 spec:
   gateways:
@@ -11,9 +11,9 @@ spec:
   http:
     - match:
         - uri:
-            prefix: /dashboards/kubernetes
+            prefix: /dashboards/grafana
       route:
         - destination:
-            host: {{ template "kubernetes-dashboard.fullname" . }}.neon-system.svc.cluster.local
+            host: grafana.neon-monitor.svc.cluster.local
             port:
-              number: 80
+              number: 3001
