[cluster-setup]: Reference new [/health-check] script for neon-cluster-operator

--- a/Lib/Neon.Kube/Resources/Helm/neon-cluster-operator/templates/deployment.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/neon-cluster-operator/templates/deployment.yaml
@@ -38,6 +38,11 @@ spec:
             - name: http
               containerPort: 80
               protocol: TCP
+          livenessProbe:
+            exec:
+              command: [ "/health-check" ]
+            initialDelaySeconds: 5
+            periodSeconds: 5
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
