added keycloak chart

--- a/Lib/Neon.Kube/Resources/Helm/keycloak/templates/cluster-realm.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/keycloak/templates/cluster-realm.yaml
@@ -10,6 +10,12 @@ spec:
     realm: neon-sso
     enabled: True
     displayName: "Neon SSO"
+    clientScopes:
+      - name: openid
+        protocol: openid-connect
+        attributes:
+          include.in.token.scope: "true"
+          display.on.consent.screen: "true"
   instanceSelector:
     matchLabels:
       app: neon-sso
