--- a/Lib/Neon.Kube/Resources/Helm/keycloak/templates/external-db-secret.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/keycloak/templates/external-db-secret.yaml
@@ -2,13 +2,12 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: keycloak-db-secret
-  namespace: keycloak
   labels:
     app: neon-sso
-data: # all values Base64
-  POSTGRES_DATABASE:  {{ .Values.database.dbName }}
-  POSTGRES_EXTERNAL_ADDRESS: {{ .Values.database.service }}
-  POSTGRES_EXTERNAL_PORT: {{ .Values.database.port }}
-  POSTGRES_PASSWORD: {{ .Values.database.password }}
-  POSTGRES_USERNAME:  {{ .Values.database.username }}
+stringData: # all values Base64
+  POSTGRES_DATABASE: "{{ .Values.database.dbName }}"
+  POSTGRES_EXTERNAL_ADDRESS: "{{ .Values.database.service }}"
+  POSTGRES_EXTERNAL_PORT: "{{ .Values.database.port }}"
+  POSTGRES_PASSWORD: "{{ .Values.database.password }}"
+  POSTGRES_USERNAME: "{{ .Values.database.username }}"
 type: Opaque
