--- a/Lib/Neon.Kube/Resources/Helm/keycloak/templates/role_binding.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/keycloak/templates/role_binding.yaml
@@ -1,11 +1,12 @@
-kind: RoleBinding
+kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: keycloak-operator
 subjects:
 - kind: ServiceAccount
   name: keycloak-operator
+  namespace: neon-system
 roleRef:
-  kind: Role
+  kind: ClusterRole
   name: keycloak-operator
   apiGroup: rbac.authorization.k8s.io
