--- a/Lib/Neon.Kube/Resources/Helm/keycloak/templates/virtualservice.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/keycloak/templates/virtualservice.yaml
@@ -1,7 +1,32 @@
-﻿apiVersion: networking.istio.io/v1alpha3
+﻿---
+kind: Service
+apiVersion: v1
+metadata:
+  name: keycloak-http
+  namespace: neon-system
+  labels:
+    app: keycloak
+  annotations:
+    description: The web server's http port.
+spec:
+  ports:
+    - name: keycloak
+      protocol: TCP
+      port: 8080
+      targetPort: 8080
+  selector:
+    app: keycloak
+    component: keycloak
+  type: ClusterIP
+  sessionAffinity: None
+  ipFamilies:
+    - IPv4
+  ipFamilyPolicy: SingleStack
+---
+apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: harbor-virtual-service
+  name: keycloak-virtual-service
   namespace: neon-ingress
 spec:
   gateways:
@@ -14,6 +39,6 @@ spec:
             prefix: /
       route:
         - destination:
-            host: keycloak.neon-system.svc.cluster.local
+            host: keycloak-http.neon-system.svc.cluster.local
             port:
-              number: 80
+              number: 8080
