--- a/Lib/Neon.Kube/Resources/Helm/kubernetes-dashboard/templates/ingress.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/kubernetes-dashboard/templates/ingress.yaml
@@ -7,11 +7,19 @@ spec:
   gateways:
     - neoncluster-gateway
   hosts:
-    - {{ .Values.clusterDomain }}
+    - k8s.{{ .Values.clusterDomain }}
   http:
     - match:
         - uri:
-            prefix: /dashboards/kubernetes
+            prefix: /oauth2
+      route:
+        - destination:
+            host: neon-sso-oauth2-proxy.neon-ingress.svc.cluster.local
+            port:
+              number: 4180
+    - match:
+        - uri:
+            prefix: /
       route:
         - destination:
             host: {{ template "kubernetes-dashboard.fullname" . }}.neon-system.svc.cluster.local
