--- a/Lib/Neon.Kube/Resources/Helm/minio/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/minio/values.yaml
@@ -161,6 +161,16 @@ tenants:
     env:
       - name: MINIO_PROMETHEUS_AUTH_TYPE
         value: public
+      - name: MINIO_IDENTITY_OPENID_CONFIG_URL
+        value: "https://sso.cluster.neoncluster.io/auth/realms/neon-sso/.well-known/openid-configuration" # Your external identity provide configuration
+      - name: MINIO_IDENTITY_OPENID_CLIENT_ID
+        value: "oauth2-proxy"
+      - name: MINIO_IDENTITY_OPENID_CLIENT_SECRET
+        value: "clientsecret"
+      - name: MINIO_IDENTITY_OPENID_SCOPES
+        value: "openid"
+      - name: MINIO_IDENTITY_OPENID_CLAIM_NAME
+        value: "https://min.io/policy"
     ## PriorityClassName indicates the Pod priority and hence importance of a Pod relative to other Pods.
     ## This is applied to MinIO pods only.
     ## Refer Kubernetes documentation for details https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/#priorityclass/
